Test_Diagrams/invalid/clinic_sequence_booking_invalid.puml
@startuml
participant Patient
participant ClinicReception
participant AppointmentService
participant ScheduleService
participant Doctor
participant Appointment
participant MedicalRecordService
participant NotificationService
participant BillingService
participant LegacyInsuranceGateway

Patient -> ClinicReception: registerPatient(patientId)
ClinicReception -> MedicalRecordService: openRecord(patientId)
Patient -> AppointmentService: bookAppointment(patientId, doctorId)
AppointmentService -> ScheduleService: findAvailableSlot(doctorId, date)
AppointmentService -> ScheduleService: reserveSlot(slotId)
AppointmentService -> Doctor: reviewSchedule()
Doctor -> Appointment: create()
AppointmentService -> Appointment: confirm()
AppointmentService -> NotificationService: sendSms(patientId, text)
AppointmentService -> BillingService: createInvoice(appointmentId)
AppointmentService -> LegacyInsuranceGateway: verifyLegacyPolicy(patientId)
BillingService -> BillingService: recalculateBalance(patientId)
@enduml
